infra/cdk.out/KindoTestStack.template.json
{
 "Resources": {
  "KindoVpc39F6D191": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/Resource"
   }
  },
  "KindoVpcPublicSubnet1SubnetC0127287": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet1/Subnet"
   }
  },
  "KindoVpcPublicSubnet1RouteTableEA86CDF3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet1/RouteTable"
   }
  },
  "KindoVpcPublicSubnet1RouteTableAssociationE6B09910": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KindoVpcPublicSubnet1RouteTableEA86CDF3"
    },
    "SubnetId": {
     "Ref": "KindoVpcPublicSubnet1SubnetC0127287"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "KindoVpcPublicSubnet1DefaultRoute60D21A8F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "KindoVpcIGW22C8C49A"
    },
    "RouteTableId": {
     "Ref": "KindoVpcPublicSubnet1RouteTableEA86CDF3"
    }
   },
   "DependsOn": [
    "KindoVpcVPCGWFF0C57DB"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "KindoVpcPublicSubnet1EIP757C910F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet1/EIP"
   }
  },
  "KindoVpcPublicSubnet1NATGatewayD72D8071": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "KindoVpcPublicSubnet1EIP757C910F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "KindoVpcPublicSubnet1SubnetC0127287"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "KindoVpcPublicSubnet1DefaultRoute60D21A8F",
    "KindoVpcPublicSubnet1RouteTableAssociationE6B09910"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet1/NATGateway"
   }
  },
  "KindoVpcPublicSubnet2Subnet517ABEA7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet2/Subnet"
   }
  },
  "KindoVpcPublicSubnet2RouteTableF6462DBB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet2/RouteTable"
   }
  },
  "KindoVpcPublicSubnet2RouteTableAssociation95495ABF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KindoVpcPublicSubnet2RouteTableF6462DBB"
    },
    "SubnetId": {
     "Ref": "KindoVpcPublicSubnet2Subnet517ABEA7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "KindoVpcPublicSubnet2DefaultRoute347253E2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "KindoVpcIGW22C8C49A"
    },
    "RouteTableId": {
     "Ref": "KindoVpcPublicSubnet2RouteTableF6462DBB"
    }
   },
   "DependsOn": [
    "KindoVpcVPCGWFF0C57DB"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "KindoVpcPublicSubnet2EIP78C3AB91": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet2/EIP"
   }
  },
  "KindoVpcPublicSubnet2NATGatewayAAF80F52": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "KindoVpcPublicSubnet2EIP78C3AB91",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "KindoVpcPublicSubnet2Subnet517ABEA7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "KindoVpcPublicSubnet2DefaultRoute347253E2",
    "KindoVpcPublicSubnet2RouteTableAssociation95495ABF"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PublicSubnet2/NATGateway"
   }
  },
  "KindoVpcPrivateSubnet1SubnetCA217F07": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet1/Subnet"
   }
  },
  "KindoVpcPrivateSubnet1RouteTableB1DFAC61": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet1/RouteTable"
   }
  },
  "KindoVpcPrivateSubnet1RouteTableAssociation4D8FFFAA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KindoVpcPrivateSubnet1RouteTableB1DFAC61"
    },
    "SubnetId": {
     "Ref": "KindoVpcPrivateSubnet1SubnetCA217F07"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "KindoVpcPrivateSubnet1DefaultRouteBD7B6A0F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "KindoVpcPublicSubnet1NATGatewayD72D8071"
    },
    "RouteTableId": {
     "Ref": "KindoVpcPrivateSubnet1RouteTableB1DFAC61"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "KindoVpcPrivateSubnet2Subnet348B362F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet2/Subnet"
   }
  },
  "KindoVpcPrivateSubnet2RouteTableCE379DEF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet2/RouteTable"
   }
  },
  "KindoVpcPrivateSubnet2RouteTableAssociation35581B3E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "KindoVpcPrivateSubnet2RouteTableCE379DEF"
    },
    "SubnetId": {
     "Ref": "KindoVpcPrivateSubnet2Subnet348B362F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "KindoVpcPrivateSubnet2DefaultRoute9A6C0A84": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "KindoVpcPublicSubnet2NATGatewayAAF80F52"
    },
    "RouteTableId": {
     "Ref": "KindoVpcPrivateSubnet2RouteTableCE379DEF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "KindoVpcIGW22C8C49A": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KindoTestStack/KindoVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/IGW"
   }
  },
  "KindoVpcVPCGWFF0C57DB": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "KindoVpcIGW22C8C49A"
    },
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoVpc/VPCGW"
   }
  },
  "KindoPostgresSubnetGroupA4659DC9": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for KindoPostgres database",
    "SubnetIds": [
     {
      "Ref": "KindoVpcPrivateSubnet1SubnetCA217F07"
     },
     {
      "Ref": "KindoVpcPrivateSubnet2Subnet348B362F"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoPostgres/SubnetGroup/Default"
   }
  },
  "KindoPostgresSecurityGroup500FDC02": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for KindoPostgres database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoPostgres/SecurityGroup/Resource"
   }
  },
  "KindoTestStackKindoPostgresSecretD5D34B883fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"kindo\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoPostgres/Secret/Resource"
   }
  },
  "KindoPostgresSecretAttachment785C492C": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "KindoTestStackKindoPostgresSecretD5D34B883fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "KindoPostgresA3E1A6C5"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoPostgres/Secret/Attachment/Resource"
   }
  },
  "KindoPostgresA3E1A6C5": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.small",
    "DBName": "kindotest",
    "DBSubnetGroupName": {
     "Ref": "KindoPostgresSubnetGroupA4659DC9"
    },
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "15.3",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "KindoTestStackKindoPostgresSecretD5D34B883fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "kindo",
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "KindoPostgresSecurityGroup500FDC02",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoPostgres/Resource"
   }
  },
  "KindoClusterFAC834C2": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/KindoCluster/Resource"
   }
  },
  "BackendServiceLB09608E98": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "BackendServiceLBSecurityGroup2B9BA648",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "KindoVpcPublicSubnet1SubnetC0127287"
     },
     {
      "Ref": "KindoVpcPublicSubnet2Subnet517ABEA7"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "KindoVpcPublicSubnet1DefaultRoute60D21A8F",
    "KindoVpcPublicSubnet1RouteTableAssociationE6B09910",
    "KindoVpcPublicSubnet2DefaultRoute347253E2",
    "KindoVpcPublicSubnet2RouteTableAssociation95495ABF"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/LB/Resource"
   }
  },
  "BackendServiceLBSecurityGroup2B9BA648": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB KindoTestStackBackendServiceLBFF3EF7B0",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/LB/SecurityGroup/Resource"
   }
  },
  "BackendServiceLBSecurityGrouptoKindoTestStackBackendServiceSecurityGroup592D9689800006DA3D1A": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "BackendServiceSecurityGroup7599F85E",
      "GroupId"
     ]
    },
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "BackendServiceLBSecurityGroup2B9BA648",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/LB/SecurityGroup/to KindoTestStackBackendServiceSecurityGroup592D9689:8000"
   }
  },
  "BackendServiceLBPublicListener2FA7FC98": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "BackendServiceLBPublicListenerECSGroupD43CD2AB"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "BackendServiceLB09608E98"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/LB/PublicListener/Resource"
   }
  },
  "BackendServiceLBPublicListenerECSGroupD43CD2AB": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "BackendServiceTaskDefTaskRoleD63B95BB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/TaskDef/TaskRole/Resource"
   }
  },
  "BackendServiceTaskDef9F97F56B": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "DATABASE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "postgres://kindo:<password>@",
           {
            "Fn::GetAtt": [
             "KindoPostgresA3E1A6C5",
             "Endpoint.Address"
            ]
           },
           ":5432/kindotest"
          ]
         ]
        }
       }
      ],
      "Essential": true,
      "Image": "amazon/amazon-ecs-sample",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "BackendServiceTaskDefwebLogGroup614D1BFF"
        },
        "awslogs-stream-prefix": "BackendService",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "BackendServiceTaskDefExecutionRole15BE46B5",
      "Arn"
     ]
    },
    "Family": "KindoTestStackBackendServiceTaskDef9F6065EC",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "BackendServiceTaskDefTaskRoleD63B95BB",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/TaskDef/Resource"
   }
  },
  "BackendServiceTaskDefwebLogGroup614D1BFF": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/TaskDef/web/LogGroup/Resource"
   }
  },
  "BackendServiceTaskDefExecutionRole15BE46B5": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/TaskDef/ExecutionRole/Resource"
   }
  },
  "BackendServiceTaskDefExecutionRoleDefaultPolicyDFB9BC56": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "BackendServiceTaskDefwebLogGroup614D1BFF",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BackendServiceTaskDefExecutionRoleDefaultPolicyDFB9BC56",
    "Roles": [
     {
      "Ref": "BackendServiceTaskDefExecutionRole15BE46B5"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "BackendService2147DAF9": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "KindoClusterFAC834C2"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 8000,
      "TargetGroupArn": {
       "Ref": "BackendServiceLBPublicListenerECSGroupD43CD2AB"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "BackendServiceSecurityGroup7599F85E",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "KindoVpcPrivateSubnet1SubnetCA217F07"
       },
       {
        "Ref": "KindoVpcPrivateSubnet2Subnet348B362F"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "BackendServiceTaskDef9F97F56B"
    }
   },
   "DependsOn": [
    "BackendServiceLBPublicListenerECSGroupD43CD2AB",
    "BackendServiceLBPublicListener2FA7FC98",
    "BackendServiceTaskDefTaskRoleD63B95BB"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/Service/Service"
   }
  },
  "BackendServiceSecurityGroup7599F85E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "KindoTestStack/BackendService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "DependsOn": [
    "BackendServiceTaskDefTaskRoleD63B95BB"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/Service/SecurityGroup/Resource"
   }
  },
  "BackendServiceSecurityGroupfromKindoTestStackBackendServiceLBSecurityGroup618410A48000504BBA24": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "BackendServiceSecurityGroup7599F85E",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "BackendServiceLBSecurityGroup2B9BA648",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "BackendServiceTaskDefTaskRoleD63B95BB"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/BackendService/Service/SecurityGroup/from KindoTestStackBackendServiceLBSecurityGroup618410A4:8000"
   }
  },
  "FrontendServiceLBC4FCC036": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "FrontendServiceLBSecurityGroup83DC324B",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "KindoVpcPublicSubnet1SubnetC0127287"
     },
     {
      "Ref": "KindoVpcPublicSubnet2Subnet517ABEA7"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "KindoVpcPublicSubnet1DefaultRoute60D21A8F",
    "KindoVpcPublicSubnet1RouteTableAssociationE6B09910",
    "KindoVpcPublicSubnet2DefaultRoute347253E2",
    "KindoVpcPublicSubnet2RouteTableAssociation95495ABF"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/LB/Resource"
   }
  },
  "FrontendServiceLBSecurityGroup83DC324B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB KindoTestStackFrontendServiceLB903589FF",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/LB/SecurityGroup/Resource"
   }
  },
  "FrontendServiceLBSecurityGrouptoKindoTestStackFrontendServiceSecurityGroup0F993F08805DA85FFA": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FrontendServiceSecurityGroupFD135B1B",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "FrontendServiceLBSecurityGroup83DC324B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/LB/SecurityGroup/to KindoTestStackFrontendServiceSecurityGroup0F993F08:80"
   }
  },
  "FrontendServiceLBPublicListener50DF6FDC": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "FrontendServiceLBPublicListenerECSGroup56B2E0A8"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "FrontendServiceLBC4FCC036"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/LB/PublicListener/Resource"
   }
  },
  "FrontendServiceLBPublicListenerECSGroup56B2E0A8": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "FrontendServiceTaskDefTaskRoleA8543F35": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/TaskDef/TaskRole/Resource"
   }
  },
  "FrontendServiceTaskDefEAA44C4A": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": "nginx",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "FrontendServiceTaskDefwebLogGroupC78F9B2E"
        },
        "awslogs-stream-prefix": "FrontendService",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "FrontendServiceTaskDefExecutionRole65651D55",
      "Arn"
     ]
    },
    "Family": "KindoTestStackFrontendServiceTaskDef514C28CE",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "FrontendServiceTaskDefTaskRoleA8543F35",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/TaskDef/Resource"
   }
  },
  "FrontendServiceTaskDefwebLogGroupC78F9B2E": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/TaskDef/web/LogGroup/Resource"
   }
  },
  "FrontendServiceTaskDefExecutionRole65651D55": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/TaskDef/ExecutionRole/Resource"
   }
  },
  "FrontendServiceTaskDefExecutionRoleDefaultPolicyBD97DD25": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FrontendServiceTaskDefwebLogGroupC78F9B2E",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FrontendServiceTaskDefExecutionRoleDefaultPolicyBD97DD25",
    "Roles": [
     {
      "Ref": "FrontendServiceTaskDefExecutionRole65651D55"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "FrontendService31F14A33": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "KindoClusterFAC834C2"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "FrontendServiceLBPublicListenerECSGroup56B2E0A8"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FrontendServiceSecurityGroupFD135B1B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "KindoVpcPrivateSubnet1SubnetCA217F07"
       },
       {
        "Ref": "KindoVpcPrivateSubnet2Subnet348B362F"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "FrontendServiceTaskDefEAA44C4A"
    }
   },
   "DependsOn": [
    "FrontendServiceLBPublicListenerECSGroup56B2E0A8",
    "FrontendServiceLBPublicListener50DF6FDC",
    "FrontendServiceTaskDefTaskRoleA8543F35"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/Service/Service"
   }
  },
  "FrontendServiceSecurityGroupFD135B1B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "KindoTestStack/FrontendService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "KindoVpc39F6D191"
    }
   },
   "DependsOn": [
    "FrontendServiceTaskDefTaskRoleA8543F35"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/Service/SecurityGroup/Resource"
   }
  },
  "FrontendServiceSecurityGroupfromKindoTestStackFrontendServiceLBSecurityGroup57725CA180FFDC4FD1": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "FrontendServiceSecurityGroupFD135B1B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FrontendServiceLBSecurityGroup83DC324B",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "DependsOn": [
    "FrontendServiceTaskDefTaskRoleA8543F35"
   ],
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/FrontendService/Service/SecurityGroup/from KindoTestStackFrontendServiceLBSecurityGroup57725CA1:80"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S207DMAz9Ft6zAEOI510ATUJQbYhX5KammHVJlThDqOq/kyZrVwbiyccnx45vUzm9upGXZ/DpJqrYTirKZbNhUFsRqNcG1VQ2L7USizf9ki1E5vOK1MbnGrnjjmhtPOMz5BUe+SM3c84oAiajB3EHbldZZx6B74HxE75EZmkf4DHxSjPagHtBquTgzTjU+r5DzWKDylvir3trfB1r+Je4LS0694te6ci3whZONktgyMHhSjsGrVCksoaMy/mY6NUhoU21L+d9ZCtcZN0ONJRoZZN+7oTJPIMtkUcNDYLTl1agCsUtKu/CaDpdD++CErqRu+0S30hTP/BTxmgG0mhH3CF2g3ZPKi0xwfjdaw3c7cHJWV2HE4irfDBQzKHq+itOwrECx6SqoMijgnS5D7f0d3Rs4oc/1lHoTR80PR69p/EMOxm5rSDYyWZt0lFGm5kQF68oo [...]
   },
   "Metadata": {
    "aws:cdk:path": "KindoTestStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "BackendServiceLoadBalancerDNSE742582D": {
   "Value": {
    "Fn::GetAtt": [
     "BackendServiceLB09608E98",
     "DNSName"
    ]
   }
  },
  "BackendServiceServiceURLB1770053": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "BackendServiceLB09608E98",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "FrontendServiceLoadBalancerDNSAA892DED": {
   "Value": {
    "Fn::GetAtt": [
     "FrontendServiceLBC4FCC036",
     "DNSName"
    ]
   }
  },
  "FrontendServiceServiceURL94B0BA88": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "FrontendServiceLBC4FCC036",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
